src/test/ui/panic-handler/panic-handler-std.stderr
error[E0152]: duplicate lang item found: `panic_impl`.
  --> $DIR/panic-handler-std.rs:7:1
   |
LL | / fn panic(info: PanicInfo) -> ! {
LL | |     loop {}
LL | | }
   | |_^
   |
   = note: first defined in crate `std`.

error: argument should be `&PanicInfo`
  --> $DIR/panic-handler-std.rs:7:16
   |
LL | fn panic(info: PanicInfo) -> ! {
   |                ^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0152`.
